objects/echosign_dev1__Agreement_Push_Mapping_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings category related to recipients of an agreement</description>
    <fields>
        <fullName>echosign_dev1__Copy_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should Adobe Sign copy the first Contact recipient’s Account lookup to the Agreement’s Account lookup?</inlineHelpText>
        <label>Copy Contact Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Copy_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should Adobe Sign copy the first Contact recipient’s Opportunity lookup to the Agreement’s Opportunity lookup?</inlineHelpText>
        <label>Copy Contact Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Create_If_Not_Found__c</fullName>
        <inlineHelpText>Specifies which Recipient type to create (Contact / Lead) in case no existing recipients (as specified in the Recipient Lookup Order) were found.</inlineHelpText>
        <label>Auto Create Recipient Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Create_Missing_Recipients__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to create missing recipients. New recipients will get created in case of Agreement Push Mapping/ Replace Signer/ Delegate Signer workflow.</description>
        <inlineHelpText>Enable this setting to create missing recipients. New recipients will get created in case of Agreement Push Mapping/ Replace Signer/ Delegate Signer workflow.</inlineHelpText>
        <label>Create Missing Recipients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Participation_Sets__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this setting to create/update Participation Sets</inlineHelpText>
        <label>Enable Participation Sets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Email_Domain_Ignore_List__c</fullName>
        <inlineHelpText>If a recipient email address belongs to one of these email domains, no Recipient Object matching (as specified in the Recipient Lookup Order) will be performed and the recipient will be stored as email address.</inlineHelpText>
        <label>Recipient Lookup Domain Ignore List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Types__c</fullName>
        <inlineHelpText>Determines the order for searching for a matching Recipient Object. E.g. If the value of this setting is ‘Contact, Lead, User’,  we will first try finding a Contact with the recipient’s email address, then a Lead and then a User.</inlineHelpText>
        <label>Recipient Lookup Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Update_Delegated_Recipients__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to mark the recipients as &apos;Delegated&apos; in case they are delegated by Signer/Sender. These recipients will be hidden from Agreement View Page.</description>
        <inlineHelpText>Enable this setting to mark the recipients as &apos;Delegated&apos; in case they are delegated by Signer/Sender. These recipients will be hidden from Agreement View Page.</inlineHelpText>
        <label>Update Delegated Recipients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Update_Recipients__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to update existing recipients attributes such as recipient status etc.</description>
        <inlineHelpText>Enable this setting to update existing recipients attributes such as recipient status etc.</inlineHelpText>
        <label>Update Recipients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Update_Replaced_Recipients__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to mark the recipients as &apos;Replaced&apos; in case they are replaced by Sender from Manage Page. These recipients will be hidden from Agreement View Page.</description>
        <inlineHelpText>Enable this setting to mark the recipients as &apos;Replaced&apos; in case they are replaced by Sender from Manage Page. These recipients will be hidden from Agreement View Page.</inlineHelpText>
        <label>Update Replaced Recipients</label>
        <type>Checkbox</type>
    </fields>
    <label>Adobe Sign Agreement Recipient Settings</label>
</CustomObject>